<resources>
    <string name="app_name">Tuwone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="public_interest_litigation">Public Interest Litigation</string>
    <string name="legal_aid">Legal Aid</string>
    <string name="child_protection_program">Child Protection Program</string>
    <string name="sensitisation">Sensitisation</string>
    <string name="people">People</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Log Out</string>
</resources>